--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,3 +1,34 @@
 .form {
   display: flex;
+  gap: 10px;
+  width: 100%;
+  margin-left: 10px;
+}
+
+.h1 {
+  color: #888;
+  margin-left: 10px;
+}
+
+.input1 {
+  flex-basis: 50%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.input2 {
+  flex-basis: 15%;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  padding: 10px;
+}
+
+.form-button {
+  flex-basis: 15%;
+  border: none;
+  background-color: blue;
+  color: white;
+  border-radius: 5px;
+  padding: 10px;
 }
